force-app/main/default/objects/Student__c/fields/Batch_Timings__c.field-meta.xml
<CustomField>
    <fullName>Batch_Timings__c</fullName>
    <description>Enter Your Timings</description>
    <inlineHelpText>Enter Your Timings</inlineHelpText>
    <label>Batch Timings</label>
    <type>Time</type>
</CustomField>