force-app/main/default/objects/Student__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <description>College Name</description>
    <inlineHelpText>College Name</inlineHelpText>
    <label>College Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>