force-app/main/default/objects/Student__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company Name</description>
    <inlineHelpText>Company Name</inlineHelpText>
    <label>Company Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>