force-app/main/default/objects/Student__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream_Opted__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>country</valueSetName>
    </valueSet>
</CustomField>