force-app/main/default/objects/Student__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Enter Your DOB</description>
    <inlineHelpText>Enter Your DOB</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>