force-app/main/default/objects/Student__c/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select Gender</description>
    <inlineHelpText>Select Gender</inlineHelpText>
    <label>Female</label>
    <type>Checkbox</type>
</CustomField>