force-app/main/default/objects/Student__c/fields/Graduate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Percentage__c</fullName>
    <description>Enter Your Percentage</description>
    <inlineHelpText>Enter Your Percentage</inlineHelpText>
    <label>Graduate Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>