force-app/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <description>Select Your Hobby</description>
    <inlineHelpText>Select Your Hobby</inlineHelpText>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Going To Gym</fullName>
            </value>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>Reading Books</fullName>
            </value>
            <value>
                <fullName>Singing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>