force-app/main/default/objects/Student__c/fields/Initial_Fees__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fees__c</fullName>
    <description>Intial Fees is 5000</description>
    <inlineHelpText>Intial Fees is 5000</inlineHelpText>
    <label>Initial Fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>