force-app/main/default/objects/Student__c/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select Gender</description>
    <inlineHelpText>Select Gender</inlineHelpText>
    <label>Male</label>
    <type>Checkbox</type>
</CustomField>