force-app/main/default/objects/Student__c/fields/Registeration_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Registeration_Date_and_Time__c</fullName>
    <description>Enter Your Registration date and time</description>
    <inlineHelpText>Enter Your Registration date and time</inlineHelpText>
    <label>Registeration Date and Time</label>
    <type>DateTime</type>
</CustomField>