force-app/main/default/objects/Student__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Upload Your Resume</description>
    <inlineHelpText>Upload Your Resume</inlineHelpText>
    <label>Resume</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>