force-app/main/default/objects/Student__c/fields/Stream_Opted__c.field-meta.xml
<CustomField>
    <fullName>Stream_Opted__c</fullName>
    <description>Choose Your Course</description>
    <inlineHelpText>Choose your Course</inlineHelpText>
    <label>Stream Opted</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android Decveloper</fullName>
                <default>true</default>
                <label>Android Decveloper</label>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Full Stack Developer</fullName>
            </value>
            <value>
                <fullName>Web Designning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>