force-app/main/default/objects/Student__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Enter Your Aadhar Number</description>
    <inlineHelpText>Enter Your Aadhar Number</inlineHelpText>
    <label>Student Aadhar Number</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>