force-app/main/default/objects/Student__c/fields/Student_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact_Number__c</fullName>
    <description>Enter your contact Number</description>
    <inlineHelpText>Enter your contact Number</inlineHelpText>
    <label>Student Contact Number</label>
    <type>Phone</type>
</CustomField>