force-app/main/default/objects/Student__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <description>Enter Email Id</description>
    <inlineHelpText>Enter Email Id</inlineHelpText>
    <label>Student Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>