force-app/main/default/objects/Student__c/fields/Student_Linkedin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Student_Linkedin_Profile__c</fullName>
    <description>Enter Your Linkedin Profile</description>
    <inlineHelpText>Enter Your Linkedin Profile</inlineHelpText>
    <label>Student Linkedin Profile</label>
    <type>Url</type>
</CustomField>