force-app/main/default/objects/Student__c/fields/Student_Location__c.field-meta.xml
<CustomField>
    <fullName>Student_Location__c</fullName>
    <description>Enter Your Location</description>
    <inlineHelpText>Enter Your Location</inlineHelpText>
    <label>Student Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>