force-app/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>Enter Student Name</description>
    <inlineHelpText>Enter Student Name</inlineHelpText>
    <label>Student Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>