force-app/main/default/objects/Student__c/fields/StudentReferredBy__c.field-meta.xml
<CustomField>
    <fullName>StudentReferredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>StudentReferredBy</description>
    <inlineHelpText>StudentReferredBy</inlineHelpText>
    <label>StudentReferredBy</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>