force-app/main/default/objects/Student__c/fields/SumOfAllRatings__c.field-meta.xml
<CustomField>
    <fullName>SumOfAllRatings__c</fullName>
    <description>SumOfAllRatings</description>
    <inlineHelpText>SumOfAllRatings</inlineHelpText>
    <label>SumOfAllRatings</label>
    <summarizedField>Rating__c.Rating_Out_of_5__c</summarizedField>
    <summaryFilterItems>
        <field>Rating__c.Rating_for_Value__c</field>
        <operation>equals</operation>
        <value>Assignment</value>
    </summaryFilterItems>
    <summaryForeignKey>Rating__c.Ratings_Given_to_which_Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>