force-app/main/default/objects/Student__c/fields/YearOfGraduation__c.field-meta.xml
<CustomField>
    <fullName>YearOfGraduation__c</fullName>
    <description>YearOfGraduation</description>
    <inlineHelpText>YearOfGraduation</inlineHelpText>
    <label>YearOfGraduation</label>
    <type>Date</type>
</CustomField>