force-app/main/default/objects/Student__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <description>Years of Experience</description>
    <inlineHelpText>Years of Experience</inlineHelpText>
    <label>Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>