force-app/main/default/objects/Student__c/recordTypes/Experienced_Student.recordType-meta.xml
<RecordType>
    <fullName>Experienced_Student</fullName>
    <active>true</active>
    <description>Experienced Student</description>
    <label>Experienced Student</label>
</RecordType>