force-app/main/default/objects/Student__c/recordTypes/Fresher_Student.recordType-meta.xml
<RecordType>
    <fullName>Fresher_Student</fullName>
    <active>true</active>
    <description>Fresher Student</description>
    <label>Fresher Student</label>
</RecordType>