force-app/main/default/objects/Student__c/validationRules/StudentNameValidateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>StudentNameValidateRule</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Student_Name__c , &#39;test&#39;)</errorConditionFormula>
    <errorMessage>Please enter valid name</errorMessage>
</ValidationRule>